--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -56,6 +56,53 @@
 			padding-bottom: 10px;
 		}
 	}
+	.review {
+		border-top: 1px solid $color-04;
+		border-bottom: 1px solid $color-04;
+		padding: 10px 125px 10px 20px;
+		position: relative;
+		background: $color-05;
+		.right-box {
+			position: absolute;
+			top: 16px;
+			right: 20px;
+			font-family: $font-01;
+			font-variant: none;
+			font-size: rem(14px);
+		}
+	}
+	.topicreview {
+		margin: 0 0 20px 0;
+		&.scrollable {
+			max-height: 350px;
+			overflow-x: hidden;
+			overflow-y: auto;
+			padding: 0 20px 0 0;
+		}
+		&[style*='max-height: none'] {
+			padding: 0;
+		}
+		.post {
+			.inner {
+				padding: 0 20px;
+			}
+			.post-buttons {
+				label[for*='post_id_list_select'] {
+					margin: 2px 0 0 0;
+					input[type='checkbox'] {
+						margin: 0 0 0 5px;
+					}
+				}
+			}
+			&.post-ignore:last-child {
+
+				padding: 0;
+			}
+		}
+		& + hr {
+			display: block;
+		}
+	}
 }
 
 /* CP - Display Actions
@@ -344,10 +391,6 @@ fieldset.display-actions + fieldset.display-actions {
 			}
 		}
 	}
-	.review {
-		border-top: 1px solid $color-04;
-		padding: 20px 0 0 0;
-	}
 }
 
 /* UCP - Private Messages - Inbox
@@ -542,15 +585,17 @@ fieldset.display-actions + fieldset.display-actions {
 	}
 }
 
-/* MCP - Forum Selection & Jumpbox
+/* MCP - Forum Selection, Tabs Container, Jumpbox
 ========================================================================== */
 
 .mcp-main {
 	position: relative;
-	.forum-selection, .action-bar.actions-jump {
+	.forum-selection, .action-bar.actions-jump, .tabs-container .minitabs {
 		position: absolute;
 		right: 0;
 		top: 0;
+	}
+	.forum-selection, .action-bar.actions-jump {
 		height: 40px;
 	}
 	.forum-selection {
@@ -575,6 +620,40 @@ fieldset.display-actions + fieldset.display-actions {
 		margin: 0;
 		& + h2 {
 			padding: 5px 200px 5px 0;
+		}
+	}
+	.tabs-container h2 {
+		padding: 1.5px 325px 1.5px 0;
+	}
+}
+
+/* MCP - Moderation Queue
+========================================================================== */
+
+.section-mcp-moderation-queue #mcp fieldset dl dd {
+	@include flex-flow(row nowrap);
+	align-items: flex-start;
+	select, .button2 {
+		@include flex;
+	}
+	.button2 {
+		margin: 0 0 0 5px;
+	}
+}
+
+/* MCP - View Topic
+========================================================================== */
+
+.section-mcp-view-topic {
+	#display-panel dl dd {
+		select {
+			width: auto;
+			&#sk {
+				margin: 0 4px 0 0;
+			}
+		}
+		label {
+			margin: 0;
 		}
 	}
 }
