--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -93,7 +93,7 @@ button[disabled], html input[disabled] {
 	}
 }
 
-.button-icon-only {
+.button-icon-only, .mcp-main .postbody .post-buttons .button {
 	@include small-form-ele($padding: 5px);
 }
 
