--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -42,9 +42,8 @@ pre, code {
 	white-space: normal;
 	display: block;
 	font-family: 'Courier New', monospace;
-	background: $color-03;
+	background: $color-05;
 	color: $color-01;
-	border: 1px solid $color-04;
 	padding: 20px;
 }
 
@@ -95,7 +94,7 @@ hr {
 	}
 }
 
-[tabindex="-1"]:focus { 
+[tabindex="-1"]:focus {
 	outline: none !important;
 }
 
@@ -141,8 +140,7 @@ a.anchor {
 	}
 }
 
-.clearfix {
-	// TO DO: ADD THESE MAYBE? .container, .container-fluid, .row
+.clearfix, .inner {
 	@include clearfix('&');
 }
 
