--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -104,6 +104,14 @@
 	&:-ms-input-placeholder      {@content}
 }
 
+// Quote characters
+@mixin quotes {
+	font-size: rem(30px);
+	@include inline-block(middle);
+	@include sizing(12px, 12px);
+	line-height: 1.2;
+}
+
 // Responsive max-width media query
 @mixin respond($breakpoint) {
 	@media only screen and (max-width: $breakpoint) {
@@ -162,10 +170,9 @@
 	transition: $value;
 }
 
-// Quote characters
-@mixin quotes {
-	font-size: rem(30px);
-	@include inline-block(middle);
-	@include sizing(12px, 12px);
-	line-height: 1.2;
+// Scrollable ucp containers
+@mixin ucp-scrollable {
+	max-height: 350px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
