--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -89,6 +89,18 @@
 	.submit-buttons {
 		margin: 0;
 	}
+	label #delete_permanent {
+		margin: 0 5px;
+	}
+	label[for='delete_reason'] {
+		margin: 20px 0 0 0;
+		strong {
+			padding: 0 7px 0 0;
+			& + br {
+				display: none;
+			}
+		}
+	}
 }
 
 /* Bottom hidden
