Add styles for directory plugin

--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -1,1 +1,10 @@
 $base-font-size: 16;
+
+// Colors
+$color-01: #ffffff; // white
+$color-02: #000000; // black
+$color-03: #5d5aff; // blue
+$color-04: #444444; // blackish
+
+// Fonts
+$font-01: 'Open Sans', Helvetica, Arial, sans-serif;
