--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-mixins.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-mixins.scss
@@ -44,15 +44,15 @@
 // flex: grow - shrink - basis
 @mixin flex($type: '') {
 	@if $type == grow {
-		flex: 1 0 auto; 
+		flex: 1 0 auto;
 	} @else if $type == base {
-		flex: 1 1 0%; 
+		flex: 1 1 0%;
 	} @else if $type == full {
 		flex: 1 1 100%;
 	} @else if $type == max {
 		flex: 0 0 auto;
 	} @else {
-		flex: 0 1 auto; 
+		flex: 0 1 auto;
 	}
 }
 
@@ -62,7 +62,7 @@
 	flex-flow: $flow;
 }
 
-// Flex flow inline 
+// Flex flow inline
 @mixin flex-flow-inline($flow) {
 	display: inline-flex;
 	flex-flow: $flow;
@@ -76,13 +76,17 @@
 	}
 }
 
-// Font Awesome icons
-@mixin fa-icon() {
-	font: normal normal normal $base-font-size + px/1 FontAwesome; // shortening font declaration
-	font-size: inherit; // can't have font-size inherit on line above, so need to override
-	text-rendering: auto; // optimizelegibility throws things off #1094
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+// FontAwesome properties
+@mixin font-awesome {
+	display: inline-block;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-variant: normal;
+  	font-family: 'FontAwesome';
+  	line-height: 1;
+  	text-rendering: auto; /* optimizelegibility throws things off #1094 */
+  	-webkit-font-smoothing: antialiased;
+  	-moz-osx-font-smoothing: grayscale;
 }
 
 // Inline block
@@ -91,13 +95,13 @@
 	vertical-align: $vertical-align;
 }
 
-// Placeholder 
+// Placeholder
 // Examples: @include placeholder {}, :focus{@include placeholder {}}, or input {@include placeholder {}}
 @mixin placeholder {
 	&::-webkit-input-placeholder {@content}
 	&:-moz-placeholder           {@content}
 	&::-moz-placeholder          {@content}
-	&:-ms-input-placeholder      {@content}  
+	&:-ms-input-placeholder      {@content}
 }
 
 // Responsive max-width media query
@@ -115,8 +119,8 @@
 
 // Transition
 @mixin transition($value) {
-	-webkit-transition: $value;	
-	-moz-transition: $value;	
-	-o-transition: $value;	
+	-webkit-transition: $value;
+	-moz-transition: $value;
+	-o-transition: $value;
 	transition: $value;
 }
