--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -5,6 +5,7 @@ $color-01: #ffffff; // white
 $color-02: #000000; // black
 $color-03: #5d5aff; // blue
 $color-04: #444444; // blackish
+$color-05: #804080; // blue
 
 // Fonts
 $font-01: 'Open Sans', Helvetica, Arial, sans-serif;
