Update a few mcp styles and fix code/pre formatting

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -38,13 +38,18 @@ dt, dd {
 	margin: 0;
 }
 
+code {
+	white-space: pre;
+	overflow: auto;
+}
+
 pre, code {
-	white-space: normal;
 	display: block;
 	font-family: 'Courier New', monospace;
 	background: $color-05;
 	color: $color-01;
 	padding: 20px;
+	white-space: pre-wrap;
 }
 
 pre code, code pre {
