--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -4,6 +4,10 @@
 /* Posting Box
 ========================================================================== */
 
+#preview ~ #postingbox {
+	margin-top: 30px;
+}
+
 #postform {
 	#colour_palette, #format-buttons {
 		margin: 0 0 20px 0;
