Update color of main boxes and cp boxes; also fix topicreview scrolling

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -181,51 +181,30 @@
 /* Main Boxes (Inner)
 ========================================================================== */
 
-.post, .topicreview {
+.post, .topicreview, .forabg, .forumbg, .panel {
 	background: rgba($color-02, 0.20);
 	border: 1px solid $color-04;
 	box-shadow: 3px 3px 6px rgba($color-02, 0.30);
 	padding: 20px 20px 0 20px;
 }
 
-.post, .topicreview {
+.forabg, .panel, #agreement {
+	margin: 0 0 $main-margin 0;
+}
+
+.post, .topicreview, .forumbg, #qr_postform .panel, .topic_poll .panel {
 	margin: 0 0 20px 0;
 }
 
 .topicreview .post {
-	padding: 0;
-	margin: 0;
-	background: none;
-	border: 0;
-	box-shadow: none;
+	@include reset-inner;
 }
 
-// .forabg, .forumbg, .panel, .topic-wrapper, .section-posting #preview, .section-posting #preview + .post,
-// .section-posting #topicreview, #agreement {
-// 	background: rgba($color-02, 0.20);
-// 	border: 1px solid $color-04;
-// 	box-shadow: 3px 3px 6px rgba($color-02, 0.30);
-// 	padding: 20px 20px 0 20px;
-// 	margin: 0 0 $main-margin 0;
-// }
-//
-// .forumbg, .topic-wrapper {
-// 	margin-bottom: 10px;
-// }
-//
-// .forabg, .forumbg {
-// 	.inner {
-// 		margin: -20px -20px 0 -20px;
-// 	}
-// }
-//
-// .panel .panel, #agreement .panel {
-// 	padding: 0;
-// 	margin: 0;
-// 	background: none;
-// 	border: 0;
-// 	box-shadow: none;
-// }
+.panel {
+	.panel, .post, .topicreview {
+		@include reset-inner;
+	}
+}
 
 /* Pagination
 ========================================================================== */
