--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -4,7 +4,7 @@
 /* Posting Box
 ========================================================================== */
 
-#preview ~ #postingbox {
+.section-posting #preview ~ #postingbox {
 	margin-top: 30px;
 }
 
