--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -43,7 +43,7 @@
 
 .cp-main {
 	@include flex(base);
-	.panel, #viewfolder .post.pm, #preview, .topicreview {
+	.panel, .post.pm, .topicreview {
 		width: 100%;
 		display: inline-block;
 		background: $color-05;
@@ -54,18 +54,6 @@
 		margin: 0 0 20px 0;
 		& + br {
 			display: none;
-		}
-	}
-	.review {
-		padding: 0 120px 0 0;
-		position: relative;
-		.right-box {
-			position: absolute;
-			top: 6px;
-			right: 0;
-			font-family: $font-01;
-			font-variant: none;
-			font-size: rem(14px);
 		}
 	}
 	.topicreview {
@@ -381,11 +369,6 @@ fieldset.display-actions + fieldset.display-actions {
 				}
 			}
 		}
-	}
-	.panel.bg2 {
-		background: none;
-		padding: 0;
-		margin: 0;
 	}
 }
 
