--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -112,6 +112,14 @@
 	line-height: 1.2;
 }
 
+@mixin reset-inner {
+	padding: 0;
+	margin: 0;
+	background: none;
+	border: 0;
+	box-shadow: none;	
+}
+
 // Responsive max-width media query
 @mixin respond($breakpoint) {
 	@media only screen and (max-width: $breakpoint) {
@@ -172,7 +180,20 @@
 
 // Scrollable ucp containers
 @mixin scrollable {
-	max-height: 400px;
-	overflow-x: hidden;
-	overflow-y: auto;
+	overflow: visible !important;
+	.scrollable-wrapper {
+		max-height: 400px;
+		overflow-x: hidden;
+		overflow-y: auto;
+		padding: 0 20px 0 0;
+		margin: 0 0 20px 0;
+	}
+	&[style*='max-height'][style*='none'] {
+		.scrollable-wrapper {
+			max-height: none;
+			overflow: visible;
+			padding: 0;
+			margin: 0;
+		}
+	}
 }
